--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<img src="./res/welome.png" width="100%" height="auto" />
 		</div>
 		<div class="extra-gap">
-			<p class="p-main">Welcome to Ecop</p>
+			<p class="p-main">Welcome to ABC</p>
 			<p class="p-sub">Please enter device SIM number and password</p>
 		</div>
 		<div class="input-field">
@@ -59,7 +59,7 @@
 			<div class="mob-num">+919747098229</div>
 			<i class="fas fa-trash-alt"></i>
 		</div>
-		<div class="Header">Ecop Security</div>
+		<div class="Header">ABC Security</div>
 	</div>
 
 	<div id="dashboard" class="d-none">
@@ -72,7 +72,7 @@
 			<div onclick="removeNumber()" class="card1">Remove Number</div>
 			<div onclick="status()" class="card1">Status</div>
 		</div>
-		<div class="Header">Ecop Security<span onclick="settings()"><i class="fas fa-ellipsis-v"></i></span></div>
+		<div class="Header">ABC Security<span onclick="settings()"><i class="fas fa-ellipsis-v"></i></span></div>
 	</div>
 
 	<div id="settings" class="d-none" onclick="closeSettings()">
