--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 		</div>
 	</div>
 
-	<div id="remover" class="">
+	<div id="remover" class="d-none">
 		<div class="remover-pannel">
-			<div class="mob-num">+919747098229</div>
-			<i class="fas fa-trash-alt"></i>
+			<div class="remover-item">
+				<div class="mob-num">+919747098229</div>
+				<div class="remove-btn"><i class="fas fa-trash-alt"></i></div>
+			</div>
+			<button id="removeSaveBtn" class="custom-button">Save changes</button>
 		</div>
 		<div class="Header">ABC Security</div>
 	</div>
