--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 </head>
 
 <body>
-	<div id="tour" class="d-none">
+	<div id="tour" class="">
 		<div id="slides">
-			<img src="res/images/img_1.jpg" style="z-index: 4;" />
+			<div class="div-one" style="z-index: 4;">qqq</div>
+			<div class="div-two" style="z-index: 3;">www</div>
+			<div class="div-three" style="z-index: 2;">eee</div>
+			<div class="div-four" style="z-index: 1;">rrr</div>
+			<!-- <img src="res/images/img_1.jpg" style="z-index: 4;" />
 			<img src="res/images/img_2.png" style="z-index: 3;" />
 			<img src="res/images/img_3.jpg" style="z-index: 2;" />
-			<img src="res/images/img_4.jpg" style="z-index: 1;" />
+			<img src="res/images/img_4.jpg" style="z-index: 1;" /> -->
 		</div>
 		<div class="slide-indicator">
 			<i class="fas fa-circle"></i>
