--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="div-one" style="z-index: 4;">qqq</div>
 			<div class="div-two" style="z-index: 3;">www</div>
 			<div class="div-three" style="z-index: 2;">eee</div>
-			<div class="div-four" style="z-index: 1;">rrr</div>
+			<div class="div-four" style="z-index: 1;"><button onclick="start()">Ok</button></div>
 			<!-- <img src="res/images/img_1.jpg" style="z-index: 4;" />
 			<img src="res/images/img_2.png" style="z-index: 3;" />
 			<img src="res/images/img_3.jpg" style="z-index: 2;" />
