--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<input id="keyInput" class="custom-control" type="password" placeholder="password">
 		</div>
 		<div class="form-group">
-			<button id="signUpBtn" disabled="disabled" class="custom-button">Sign In</button>
+			<button id="signUpBtn" onclick="signUp();" disabled="disabled" class="custom-button">Sign In</button>
 		</div>
 	</div>
 
